--- a/form_django/daily/details/templates/public/signup.html
+++ b/form_django/daily/details/templates/public/signup.html
@@ -20,6 +20,7 @@
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
       
                       <form class="mx-1 mx-md-4">
+                        {% csrf_token %}
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -61,9 +62,9 @@
                         </div>
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                         <a href="#">Register</a>
+                         <a href="#" class="btn btn-success btn-lg">Register</a>
                         </div>
-                        <p>Already have account? <a href="{% url 'index' %}">Sign In</a> </p>
+                        <p>Already have account? <a href="{% url 'detail:index' %}">Sign In</a> </p>
       
                       </form>
       
