--- a/form_django/daily/details/templates/public/signup.html
+++ b/form_django/daily/details/templates/public/signup.html
@@ -19,13 +19,13 @@
       
                       <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
       
-                      <form class="mx-1 mx-md-4">
+                      <form class="mx-1 mx-md-4" action="{% url 'detail:home' %}" method="POST">
                         {% csrf_token %}
       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="form3Example1c" class="form-control" />
+                            <input type="text" id="form3Example1c" name='fname' class="form-control" />
                             <label class="form-label" for="form3Example1c">Your Name</label>
                           </div>
                         </div>
@@ -33,7 +33,7 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="email" id="form3Example3c" class="form-control" />
+                            <input type="email" name="email" id="form3Example3c" class="form-control" />
                             <label class="form-label" for="form3Example3c">Your Email</label>
                           </div>
                         </div>
@@ -41,11 +41,11 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="form3Example4c" class="form-control" />
+                            <input type="password" name="password" id="form3Example4c" class="form-control" />
                             <label class="form-label" for="form3Example4c">Password</label>
                           </div>
                         </div>
-      
+<!--       
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
@@ -53,7 +53,7 @@
                             <label class="form-label" for="form3Example4cd">Repeat your password</label>
                           </div>
                         </div>
-      
+       -->
                         <div class="form-check d-flex justify-content-center mb-5">
                           <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
                           <label class="form-check-label" for="form2Example3">
@@ -62,7 +62,8 @@
                         </div>
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                         <a href="#" class="btn btn-success btn-lg">Register</a>
+                         <!-- <a href="{% url 'detail:addData' %}" class="btn btn-success btn-lg">Register</a> -->
+                         <button class="btn btn-dark btn-lg">Register</button>
                         </div>
                         <p>Already have account? <a href="{% url 'detail:index' %}">Sign In</a> </p>
       
